Divide into tasks

--- a/Lab1 Pre-processing.ipynb
+++ b/Lab1 Pre-processing.ipynb
@@ -44,31 +44,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Numpy\n",
-    "\n",
-    "## Pandas \n",
-    "Pandas is an open-source Python library providing high-performance, easy-to-use data structures and data analysis tools.\n",
-    "It is very popular among data scientists and statisticians as it allows you to work very quickly and efficiently."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "# Makes matplotlib plots work better with Jupyter\n",
+    "%matplotlib inline  \n",
+    "\n",
+    "# Import the necessary libraries. \n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1: Loading the data\n",
     "\n",
-    "data = pd.read_csv('data/Data-Mining-Spring-2018.csv', sep=\",\")\n",
-    "print(data.shape)\n",
-    "print('I.e. there are',data.shape[0],'data points with',data.shape[1],'features.')\n",
-    "# print(data.columns.values)  # <-- Print the name of the feature.\n"
+    "The first this first assignment you must \n",
+    "\n",
+    "1) load the data in `./data/Data-Mining-Spring-2018.csv` using **`pandas`**.\n",
+    "Pandas is an open-source Python library providing high-performance, easy-to-use data structures and data analysis tools.\n",
+    "It is very popular among data scientists and statisticians as it allows you to work very quickly and efficiently.\n",
+    "\n",
+    "2) Make sense of the data by printing the first 20 values. Determine the number of observations and features in the data, and have a quick look at what types they are (or should be).\n"
    ]
   },
   {
@@ -77,92 +82,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(data.columns.values)\n",
+    "# Check that data and data path is present\n",
+    "assert os.path.isdir(\"./data\") and os.path.exists(\"./data/Data-Mining-Spring-2018.csv\"), 'Data not found. Make sure to have the most recent version!'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE \n",
+    "data = pd.read_csv('data/Data-Mining-Spring-2018.csv', sep=\",\")\n",
+    "print('Data shape:', data.shape)\n",
+    "print('I.e. there are',data.shape[0],'observations, each with',data.shape[1],'features.')\n",
+    "# print(data.columns.values)  # <-- Print the name of the feature.\n",
     "\n",
-    "feature_sub = ['Age', 'Gender', 'Shoe Size', 'Height', 'What degree are you studying?']\n",
+    "data[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2: Cleaning the data\n",
+    "1) We don't want to work with all the features for this exercise. Select a subset of the features, as defined by `feature_sub` (cell below)\n",
     "\n",
+    "2) Rename the columns, such that `What degree are you studying?` becomes `Degree`, and `Shoe Size` becomes `ShoeSize`. Not having spaces (or long names) makes it easier to work with the data in `pandas`.\n",
+    " * Look at the `rename` method.\n",
+    "\n",
+    "2) Convert the columns to the appropriate data formats (e.g. `Age` should be a float).\n",
+    " * `to_numeric` is a useful method (but not the only way) to convert strings to numerical values, and the `errors` can be used to handle errors.\n",
+    " * `dropna` can be used to remove `nan` values.\n",
+    "\n",
+    "3) Visualize each of the numerical featues (Age, ShoeSize, Height). The objective here is to see if there are any outliers that we want to take care off"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_sub = ['Age', 'Gender', 'Shoe Size', 'Height', 'What degree are you studying?']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE\n",
+    "\n",
+    "# 1\n",
     "data_sub = data[feature_sub]\n",
+    "\n",
+    "# 2\n",
     "data_sub = data_sub.rename(columns={'What degree are you studying?': \"Degree\"})\n",
     "data_sub = data_sub.rename(columns={'Shoe Size': \"ShoeSize\"})\n",
     "\n",
+    "# 3\n",
     "data_sub['Age'] = pd.to_numeric(data_sub['Age'], errors='coerce')\n",
-    "data_sub.loc[data_sub.Age.map(lambda x: not 10.0 <= x <= 70.0), 'Age'] = np.nan\n",
-    "\n",
     "data_sub['ShoeSize'] = pd.to_numeric(data_sub['ShoeSize'], errors='coerce')\n",
-    "data_sub.loc[data_sub.ShoeSize.map(lambda x: not 20.0 <= x <= 60.0), 'ShoeSize'] = np.nan\n",
-    "\n",
     "data_sub['Height'] = pd.to_numeric(data_sub['Height'], errors='coerce')\n",
-    "data_sub.loc[data_sub.Height.map(lambda x: not 100.0 <= x <= 250.0), 'Height'] = np.nan\n",
-    "\n",
     "data_sub = data_sub.dropna()\n",
-    "data_sub\n"
+    "\n",
+    "# 4\n",
+    "def hist_plot(data):\n",
+    "    plt.figure(figsize=[8,8])\n",
+    "\n",
+    "    plt.subplot(211)\n",
+    "    plt.hist(data.Age.values)\n",
+    "    plt.title(\"Age\")\n",
+    "\n",
+    "    plt.subplot(223)\n",
+    "    plt.hist(data.ShoeSize.values)\n",
+    "    plt.title(\"ShoeSize\")\n",
+    "\n",
+    "    plt.subplot(224)\n",
+    "    plt.hist(data.Height.values)\n",
+    "    plt.title(\"Height\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "hist_plot(data_sub)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data_sub['Gender'] = data_sub['Gender'].apply(lambda x: x.lower())\n",
+    "## Task 3: Remove Invalid values\n",
     "\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['man', 'male', 'alpha male', 'man ', 'm']), 'Gender'] = '0'\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['f', 'female', 'woman']), 'Gender'] = '1'\n",
-    "data_sub[['Gender']] = pd.to_numeric(data_sub['Gender'], errors='coerce')\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: np.isnan(x)), 'Gender'] = 3\n",
+    "This taks is more subjective than the others.\n",
+    "You will use your domain knowledge to determine what are reasonable values for each of these features, and remove the invalid ones.\n",
     "\n",
-    "data_sub[:20]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data_sub.shape)\n",
-    "print('I.e. there are',data_sub.shape[0],'data points with',data_sub.shape[1],'features.')\n",
+    "1) Remove invalid data points.\n",
+    " * `loc` is useful for this.\n",
     "\n",
-    "data_sub.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_sub.columns.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=[8,8])\n",
-    "plot_fun = plt.hist\n",
-    "# plot_fun = plt.boxplot\n",
-    "\n",
-    "plt.subplot(221)\n",
-    "plot_fun(data_sub.Age.values)\n",
-    "plt.title(\"Age\")\n",
-    "\n",
-    "plt.subplot(222)\n",
-    "plot_fun(data_sub.Gender.values)\n",
-    "plt.title(\"Gender\")\n",
-    "\n",
-    "plt.subplot(223)\n",
-    "plot_fun(data_sub.ShoeSize.values)\n",
-    "plt.title(\"ShoeSize\")\n",
-    "\n",
-    "plt.subplot(224)\n",
-    "plot_fun(data_sub.Height.values)\n",
-    "plt.title(\"Height\")\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
+    "2) Visualize the data agin. If it still looks strange go back to 1)\n",
     "\n"
    ]
   },
@@ -172,7 +191,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
+    "## YOUR CODE HERE\n",
+    "data_sub.loc[data_sub.Age.map(lambda x: not 10.0 <= x <= 70.0), 'Age'] = np.nan\n",
+    "data_sub.loc[data_sub.ShoeSize.map(lambda x: not 20.0 <= x <= 60.0), 'ShoeSize'] = np.nan\n",
+    "data_sub.loc[data_sub.Height.map(lambda x: not 100.0 <= x <= 250.0), 'Height'] = np.nan\n",
+    "data_sub = data_sub.dropna()\n",
+    "\n",
+    "data_sub.info()\n",
+    "data_sub[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4: Convert Genter to Integers\n",
+    "We often prefer working with integer class labels, rather than strings. \n",
+    "As you can see the gender has been specified in several different ways, so you need to do some work making the data nicer.\n",
+    "For this taks you should:\n",
+    "\n",
+    "1) convert males to 0, females to 1, and other for 2\n",
+    "\n",
+    "2) Determine the ratio of the three categories?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE\n",
+    "data_sub['Gender'] = data_sub['Gender'].apply(lambda x: x.lower())\n",
+    "\n",
+    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['man', 'male', 'alpha male', 'man ', 'm']), 'Gender'] = '0'\n",
+    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['f', 'female', 'woman']), 'Gender'] = '1'\n",
+    "data_sub[['Gender']] = pd.to_numeric(data_sub['Gender'], errors='coerce')\n",
+    "data_sub.loc[data_sub.Gender.map(lambda x: np.isnan(x)), 'Gender'] = 2\n",
+    "\n",
+    "data_sub[:20]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 5: Visualize the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sns.set(style=\"ticks\")\n",
     "\n",
     "sns.pairplot(data_sub, hue=\"Degree\")"
@@ -183,22 +255,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check if data is there\n",
-    "# if not put data there\n",
-    "\n",
-    "print(os.path.isdir(\"./data\"))\n",
-    "print(os.path.exists(\"./data/fifa.csv\"))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
