Lab1 almost complete (post Paolo comments)

--- a/dev/Lab1 Pre-processing.ipynb
+++ b/dev/Lab1 Pre-processing.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,11 +16,13 @@
     "\n",
     "## Lab structure\n",
     "The labs will be made available on [GitHub](https://github.com/Faur/ITU-Data-Science-in-Games-Exercises) on a roling basis.\n",
-    "You can update your local version through the notebook by removing the comment symbol `#` in the cell below.\n",
-    "(`!` tells the notebook to run the command in the terminal, instead of in thr Python interpriter).\n",
+    "Be sure to update your local version by pulling from the repo.\n",
+    "This can be done from the notebook by using the cell below.\n",
+    "Remove the comment symbol `#` and run the cell (`Ctrl` + `Enter`).\n",
+    "`!` tells the notebook to run the command in the terminal, instead of in thr Python interpriter.\n",
     "\n",
     "Some important notes\n",
-    "* Shut down notebooks when you are done. Otherwise we will run out of resources, and be forced to restart the servers.\n",
+    "* Shut down notebooks when you are done. Otherwise the server will run out of resources, and we will be forced to restart the them.\n",
     "* Server storage is volatile! I.e. you must **save everything locally** that you don't want to loose."
    ]
   },
@@ -50,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Makes matplotlib plots work better with Jupyter\n",
-    "%matplotlib inline  \n",
+    "%matplotlib inline\n",
     "\n",
     "# Import the necessary libraries. \n",
     "import os\n",
@@ -73,7 +74,8 @@
     "Pandas is an open-source Python library providing high-performance, easy-to-use data structures and data analysis tools.\n",
     "It is very popular among data scientists and statisticians as it allows you to work very quickly and efficiently.\n",
     "\n",
-    "2) Make sense of the data by printing the first 20 values. Determine the number of observations and features in the data, and have a quick look at what types they are (or should be).\n"
+    "2) Make sense of the data by printing the first 10 values. Determine the number of observations and features in the data, and have a quick look at what data types they are (or should be).\n",
+    "* Pandas dataframes have the `head` method that is useful printing a limited number of observations."
    ]
   },
   {
@@ -96,9 +98,9 @@
     "data = pd.read_csv('data/Data-Mining-Spring-2018.csv', sep=\",\")\n",
     "print('Data shape:', data.shape)\n",
     "print('I.e. there are',data.shape[0],'observations, each with',data.shape[1],'features.')\n",
-    "# print(data.columns.values)  # <-- Print the name of the feature.\n",
+    "# print(data.columns.values)  # <-- Print the name of all the feature.\n",
     "\n",
-    "data[:20]"
+    "data.head(10)"
    ]
   },
   {
@@ -113,9 +115,7 @@
     "\n",
     "2) Convert the columns to the appropriate data formats (e.g. `Age` should be a float).\n",
     " * `to_numeric` is a useful method (but not the only way) to convert strings to numerical values, and the `errors` can be used to handle errors.\n",
-    " * `dropna` can be used to remove `nan` values.\n",
-    "\n",
-    "3) Visualize each of the numerical featues (Age, ShoeSize, Height). The objective here is to see if there are any outliers that we want to take care off"
+    " * `dropna` can be used to remove `nan` values.\n"
    ]
   },
   {
@@ -148,7 +148,25 @@
     "data_sub['Height'] = pd.to_numeric(data_sub['Height'], errors='coerce')\n",
     "data_sub = data_sub.dropna()\n",
     "\n",
-    "# 4\n",
+    "print(data_sub.describe())\n",
+    "print('\\n\\n')\n",
+    "print(data_sub.head(15))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have `Age`, `ShoeSize`, and `Height` as numerical we can start visualizing it.\n",
+    "Simple visualizations, like histograms are an easy way to check for outliers or faulty data that we need to take care of."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def hist_plot(data):\n",
     "    plt.figure(figsize=[8,8])\n",
     "\n",
@@ -166,6 +184,7 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
     "hist_plot(data_sub)"
    ]
   },
@@ -175,14 +194,14 @@
    "source": [
     "## Task 3: Remove Invalid values\n",
     "\n",
-    "This taks is more subjective than the others.\n",
-    "You will use your domain knowledge to determine what are reasonable values for each of these features, and remove the invalid ones.\n",
+    "In the histograms above we see that several values seem suspicious, e.g. a height of 19 cm is probably not true.\n",
+    "In this exercise your job is to remove the faulty observations.\n",
+    "This is ofcourse fundamentally a subjective taks, where you will have to rely on your domain knowledge.\n",
     "\n",
-    "1) Remove invalid data points.\n",
-    " * `loc` is useful for this.\n",
+    "1) Remove the observations with invalid data points.\n",
+    " * `df.where`/`df.mask` can be useful for these kinds of operations.\n",
     "\n",
-    "2) Visualize the data agin. If it still looks strange go back to 1)\n",
-    "\n"
+    "2) Visualize the data agin. If it still looks strange go back to 1)\n"
    ]
   },
   {
@@ -192,27 +211,37 @@
    "outputs": [],
    "source": [
     "## YOUR CODE HERE\n",
-    "data_sub.loc[data_sub.Age.map(lambda x: not 10.0 <= x <= 70.0), 'Age'] = np.nan\n",
-    "data_sub.loc[data_sub.ShoeSize.map(lambda x: not 20.0 <= x <= 60.0), 'ShoeSize'] = np.nan\n",
-    "data_sub.loc[data_sub.Height.map(lambda x: not 100.0 <= x <= 250.0), 'Height'] = np.nan\n",
-    "data_sub = data_sub.dropna()\n",
     "\n",
-    "data_sub.info()\n",
-    "data_sub[:10]"
+    "# TODO: look at df.where https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.where.html\n",
+    "\n",
+    "data_sub.mask(data_sub.Age < 15, np.nan, inplace=True)\n",
+    "data_sub.mask(data_sub.Age > 70, np.nan, inplace=True)\n",
+    "\n",
+    "data_sub.mask(data_sub.ShoeSize < 20, np.nan, inplace=True)\n",
+    "data_sub.mask(data_sub.ShoeSize > 60, np.nan, inplace=True)\n",
+    "\n",
+    "data_sub.mask(data_sub.Height < 100, np.nan, inplace=True)\n",
+    "data_sub.mask(data_sub.Height > 250, np.nan, inplace=True)\n",
+    "\n",
+    "data_sub = data_sub.dropna()\n",
+    "hist_plot(data_sub)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4: Convert Genter to Integers\n",
+    "## Task 4: Convert Gender to Integers\n",
     "We often prefer working with integer class labels, rather than strings. \n",
     "As you can see the gender has been specified in several different ways, so you need to do some work making the data nicer.\n",
     "For this taks you should:\n",
     "\n",
-    "1) convert males to 0, females to 1, and other for 2\n",
+    "1) Create a new column called `GenderNumerical` with 0's for males, 1's for females, and 2's for other.\n",
+    " * Define a function that interprets the `Gender` string, and returns the appropriate number.\n",
+    "  * Python distinguishes between upper and lower case, so when working with strings it can sometimes help converting everything to lower case.\n",
+    " * Use `df.apply` to apply to every element in\n",
     "\n",
-    "2) Determine the ratio of the three categories?"
+    "2) Determine the ratio of the three gender categories.\n"
    ]
   },
   {
@@ -221,22 +250,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "data_sub['Gender'] = data_sub['Gender'].apply(lambda x: x.lower())\n",
+    "print(\"Values in the 'Gender' column:\")\n",
+    "print(np.unique(data_sub['Gender']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_gender_numerical(string):\n",
+    "    ## YOUR CODE HERE\n",
+    "    \n",
+    "    string = string.lower()\n",
+    "    if string in ['man', 'male', 'alpha male', 'man ', 'm']:\n",
+    "        return 0\n",
+    "    elif string in ['f', 'female', 'woman']:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
     "\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['man', 'male', 'alpha male', 'man ', 'm']), 'Gender'] = '0'\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: x in ['f', 'female', 'woman']), 'Gender'] = '1'\n",
-    "data_sub[['Gender']] = pd.to_numeric(data_sub['Gender'], errors='coerce')\n",
-    "data_sub.loc[data_sub.Gender.map(lambda x: np.isnan(x)), 'Gender'] = 2\n",
+    "data_sub['GenderNumerical'] = data_sub['Gender'].apply(determine_gender_numerical)\n",
     "\n",
-    "data_sub[:20]\n"
+    "print(\"Male\\t\", np.sum(data_sub.GenderNumerical==0) / len(data_sub))\n",
+    "print(\"Female\\t\", np.sum(data_sub.GenderNumerical==1) / len(data_sub))\n",
+    "print(\"Other\\t\", np.sum(data_sub.GenderNumerical==2) / len(data_sub))\n",
+    "\n",
+    "data_sub.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 5: Visualize the Data"
+    "## Scatter plot visualization\n",
+    "\n",
+    "Another cool python library to look into is [Bokeh](https://bokeh.pydata.org).\n",
+    "It allows you to easily create "
    ]
   },
   {
@@ -247,7 +298,18 @@
    "source": [
     "sns.set(style=\"ticks\")\n",
     "\n",
-    "sns.pairplot(data_sub, hue=\"Degree\")"
+    "sns.pairplot(data_sub, hue=\"Degree\")\n",
+    "plt.title(\"Subset\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 5: Normalize Data\n",
+    "\n",
+    "For this task you are suppose to \n"
    ]
   },
   {
@@ -255,7 +317,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_norm = ## YOUR CODE HERE\n",
+    "\n",
+    "def normalize(df):\n",
+    "    result = pd.DataFrame()\n",
+    "    for feature_name in df.columns:\n",
+    "        if df[feature_name].dtype == np.float64 or df[feature_name].dtype == np.int64:\n",
+    "            result[feature_name] = (df[feature_name] - df[feature_name].mean()) / (df[feature_name].std())\n",
+    "    return result\n",
+    "\n",
+    "data_norm = normalize(data_sub)\n",
+    "data_norm['Degree'] = data_sub.Degree\n",
+    "\n",
+    "data_norm.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "data_as_numpy = data_norm[['Age', 'ShoeSize', 'Height', 'GenderNumerical']].values\n",
+    "pca = PCA(n_components=2)\n",
+    "principalComponents = pca.fit_transform(data_as_numpy)\n",
+    "principalDf = pd.DataFrame(data = principalComponents, columns = ['PC1', 'PC2'])\n",
+    "principalDf['Degree'] = data_sub.Degree\n",
+    "\n",
+    "sns.scatterplot(data=principalDf, x='PC1', y='PC2', hue='Degree')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
