--- a/development/Lab1 Pre-processing.ipynb
+++ b/development/Lab1 Pre-processing.ipynb
@@ -14,15 +14,15 @@
     "* an introduction / reminder to key data science libraries (Numpy, Pandas)\n",
     "* experience with loading, validating, and visualizing data.\n",
     "\n",
-    "## Lab structure\n",
+    "## Quick note on the labs\n",
     "The labs will be made available on [GitHub](https://github.com/Faur/ITU-Data-Science-in-Games-Exercises) on a roling basis.\n",
-    "Be sure to update your local version by pulling from the repo.\n",
+    "Be sure to have the most recent version locally by pulling from the repo.\n",
     "This can be done from the notebook by using the cell below.\n",
     "Remove the comment symbol `#` and run the cell (`Ctrl` + `Enter`).\n",
     "`!` tells the notebook to run the command in the terminal, instead of in thr Python interpriter.\n",
     "\n",
-    "Some important notes\n",
-    "* Shut down notebooks when you are done. Otherwise the server will run out of resources, and we will be forced to restart the them.\n",
+    "Some important notes:\n",
+    "* **Shut down notebooks** when you are done. Otherwise the server will run out of resources, and we will be forced to restart the them.\n",
     "* Server storage is volatile! I.e. you must **save everything locally** that you don't want to loose."
    ]
   },
