Fix nominal data in PCA

--- a/Lab1 Pre-processing.ipynb
+++ b/Lab1 Pre-processing.ipynb
@@ -98,14 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n",
-    "data = pd.read_csv(basedir+'data/Data-Mining-Spring-2018.csv', sep=\",\")\n",
-    "print('Data shape:', data.shape)\n",
-    "print('I.e. there are',data.shape[0],'observations, each with',data.shape[1],'features.')\n",
-    "# print(data.columns.values)  # <-- Print the name of all the feature.\n",
-    "\n",
-    "data.head(10)"
-   ]
+    "## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -142,27 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "\n",
-    "data_sub = data[feature_sub]\n",
-    "\n",
-    "\n",
-    "data_sub = data_sub.rename(columns={'What degree are you studying?': \"Degree\"})\n",
-    "data_sub = data_sub.rename(columns={'Shoe Size': \"ShoeSize\"})\n",
-    "\n",
-    "\n",
-    "data_sub['Age'] = pd.to_numeric(data_sub['Age'], errors='coerce')\n",
-    "data_sub['ShoeSize'] = pd.to_numeric(data_sub['ShoeSize'], errors='coerce')\n",
-    "data_sub['Height'] = pd.to_numeric(data_sub['Height'], errors='coerce')\n",
-    "\n",
-    "data_sub['Gender'] = data_sub['Gender'].apply(str)\n",
-    "data_sub['Degree'] = data_sub['Degree'].apply(str)\n",
-    "data_sub = data_sub.dropna()\n",
-    "\n",
-    "print(data_sub.describe())\n",
-    "print('\\n\\n')\n",
-    "print(data_sub.head(10))\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -224,20 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "\n",
-    "data_sub.mask(data_sub.Age < 15, np.nan, inplace=True)\n",
-    "data_sub.mask(data_sub.Age > 70, np.nan, inplace=True)\n",
-    "\n",
-    "data_sub.mask(data_sub.ShoeSize < 20, np.nan, inplace=True)\n",
-    "data_sub.mask(data_sub.ShoeSize > 60, np.nan, inplace=True)\n",
-    "\n",
-    "data_sub.mask(data_sub.Height < 100, np.nan, inplace=True)\n",
-    "data_sub.mask(data_sub.Height > 250, np.nan, inplace=True)\n",
-    "\n",
-    "data_sub = data_sub.dropna()\n",
-    "hist_plot(data_sub)"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -276,24 +236,7 @@
    "outputs": [],
    "source": [
     "def determine_gender_numerical(string):\n",
-    "    ## YOUR CODE HERE\n",
-    "    \n",
-    "    string = string.lower()\n",
-    "    if string in ['man', 'male', 'alpha male', 'man ', 'm']:\n",
-    "        return 0\n",
-    "    elif string in ['f', 'female', 'woman']:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 2\n",
-    "\n",
-    "data_sub['GenderNumerical'] = data_sub['Gender'].apply(determine_gender_numerical)\n",
-    "\n",
-    "print(\"Male\\t\", np.sum(data_sub.GenderNumerical==0) / len(data_sub))\n",
-    "print(\"Female\\t\", np.sum(data_sub.GenderNumerical==1) / len(data_sub))\n",
-    "print(\"Other\\t\", np.sum(data_sub.GenderNumerical==2) / len(data_sub))\n",
-    "\n",
-    "data_sub.head(10)"
-   ]
+    "    ## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -354,20 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_norm = None ## YOUR CODE HERE\n",
-    "\n",
-    "def normalize(df):\n",
-    "    result = pd.DataFrame()\n",
-    "    for feature_name in df.columns:\n",
-    "        if df[feature_name].dtype == np.float64 or df[feature_name].dtype == np.int64:\n",
-    "            result[feature_name] = (df[feature_name] - df[feature_name].mean()) / (df[feature_name].std())\n",
-    "    return result\n",
-    "\n",
-    "data_norm = normalize(data_sub)\n",
-    "data_norm['Degree'] = data_sub.Degree\n",
-    "\n",
-    "data_norm.head(10)"
-   ]
+    "data_norm = None ## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
