--- a/Lab1 Pre-processing.ipynb
+++ b/Lab1 Pre-processing.ipynb
@@ -309,8 +309,10 @@
     "PCA is a popular visualization technique, as it allows you to project high dimensional data into a low dimensional space.\n",
     "This is usefull for reducing the number of features, or for visualizing features.\n",
     "\n",
-    "A simple PCA plot that projects 'Age', 'ShoeSize', 'GenderNumerical' down into 2 dimensions is performed below.\n",
-    "If we color the dots with the remaining two attributes 'Degree' and 'Height' we see that PCA doesn't seem to separate 'Degree', where as 'Height' is separated somewhat nicely.\n"
+    "A simple PCA plot that projects 'Age', 'ShoeSize', 'Height' down into 2 dimensions is performed below.\n",
+    "We cannot use 'Degree' and 'GenderNumerical' to compute the projection, as they are nominal.\n",
+    "We can however use them to color the plots in order to see how well PCA semarates the two clusters.\n",
+    "We see that PCA doesn't seem to separate 'Degree', where as 'Height' is separated somewhat nicely."
    ]
   },
   {
@@ -323,20 +325,27 @@
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "data_as_numpy = data_norm[['Age', 'ShoeSize', 'GenderNumerical']].values\n",
+    "data_as_numpy = data_norm[['Age', 'ShoeSize', 'Height']].values\n",
     "pca = PCA(n_components=2)\n",
     "principalComponents = pca.fit_transform(data_as_numpy)\n",
     "principalDf = pd.DataFrame(data = principalComponents, columns = ['PC1', 'PC2'])\n",
     "\n",
     "principalDf['Degree'] = data_sub.Degree.values\n",
-    "principalDf['Height'] = data_sub.Height.values\n",
+    "principalDf['GenderNumerical'] = data_sub.GenderNumerical.values\n",
     "\n",
     "sns.scatterplot(data=principalDf, x='PC1', y='PC2', hue='Degree')\n",
     "plt.show()\n",
     "\n",
-    "sns.scatterplot(data=principalDf, x='PC1', y='PC2', hue='Height', palette='RdBu')\n",
+    "sns.scatterplot(data=principalDf, x='PC1', y='PC2', hue='GenderNumerical', palette=sns.color_palette(\"muted\",3))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
