cleaned output and student code

--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -145,43 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n",
-    "\n",
-    "# 1\n",
-    "# Creates a DF with a Hierarchical index, the only accessible column  is ID\n",
-    "# (for details about comple indexing see https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html)\n",
-    "gb = data.groupby('Nationality')\n",
-    "natCount = pd.DataFrame({'count': gb.size()})\n",
-    "\n",
-    "# Flattens the index\n",
-    "natCount = natCount.reset_index()\n",
-    "\n",
-    "# # 3\n",
-    "# natCount = natCount \\\n",
-    "#     .sort_values('count', ascending=False) \\\n",
-    "#     .head(20)\n",
-    "\n",
-    "# # 4\n",
-    "# natCount = natCount[natCount['count'] > 400]\n",
-    "\n",
-    "# 2\n",
-    "natCount.plot('Nationality', kind='bar')\n",
-    "plt.show() \n",
-    "\n",
-    "\n",
-    "sns.barplot(natCount['Nationality'].values, natCount['count'].values, color='firebrick')\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "plt.bar(natCount['Nationality'].values, natCount['count'].values, label='count')\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "# NB: seaborn can group and count the dataset automatically, but doesn't allow to manipulate the resulting dataset\n",
-    "# sns.countplot(data.Nationality, color='red')\n",
-    "# plt.show()"
-   ]
+    "## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -291,22 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "\n",
-    "#1\n",
-    "aggregation_columns = ['min', 'max', 'mean']\n",
-    "gb = subset.groupby('Club').agg(aggregation_columns)\n",
-    "\n",
-    "#2\n",
-    "gb \\\n",
-    "    .head(10) \\\n",
-    "    .plot(kind='bar', figsize=(20, 8))\n",
-    "plt.show()\n",
-    "\n",
-    "#3\n",
-    "gb.boxplot(figsize=(20, 8))\n",
-    "plt.show()"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -376,25 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n",
-    "\n",
-    "# less obscure than subplot, but limited to same size plots\n",
-    "f, axs = plt.subplots(1, 2)\n",
-    "axs[0].set_title('KDE')\n",
-    "axs[1].set_title('Distplot')\n",
-    "\n",
-    "plt.ticklabel_format(style='plain', axis='x')\n",
-    "for i, feature in enumerate(features):\n",
-    "    sns.kdeplot(values[feature].dropna(), shade=True, ax=axs[0])\n",
-    "    \n",
-    "# we don't want the show here, we would destroy the context for the second subgraph\n",
-    "# plt.show()\n",
-    "\n",
-    "for feature in features:\n",
-    "    sns.distplot(values[feature].dropna(), ax=axs[1], label=feature, bins=[0, 25, 50, 75, 100])\n",
-    "    plt.legend()\n",
-    "plt.show()"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
