--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -63,8 +63,7 @@
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "# TODO fix path\n",
-    "basedir = \"../\"\n",
+    "basedir = \"./\"\n",
     "file = \"fifa.csv\"\n",
     "assert os.path.isdir(f\"{basedir}data\") and os.path.exists(f\"{basedir}data/{file}\"), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
@@ -145,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n"   ]
+    "## YOUR CODE HERE \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +255,8 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"   ]
+    "## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,7 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"   ]
+    "## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
