added install of statsmodels

--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -35,6 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# install dependencies\n",
+    "!pip install --user statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Makes matplotlib plots work better with Jupyter\n",
     "%matplotlib inline\n",
     "\n",
