--- a/development/Lab3 Association Mining.ipynb
+++ b/development/Lab3 Association Mining.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/rasbt/mlxtend/blob/master/mlxtend/frequent_patterns/apriori.py\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Association Mining!\n",
     "\n",
     "The problem - How do you determine which items belong together from data? \n",
@@ -42,7 +33,9 @@
     "Rule constraints \n",
     "* Support - of an item set X is the proportion of observations in the dataset where X occurs\n",
     "    * $supp(X) = \\frac{\\text{# observations with X}}{\\text{Total # transactions}}$\n",
-    "* Confidence - How strong is the rule? I.e. the confidence for `X->Y` is the likelihood that `Y` is purchased, if `X` is purchased. This is the same as the [conditional probability](https://memegenerator.net/img/instances/62035478/you-went-full-bayesian-never-go-full-bayesian.jpg). It is defined as follows:\n",
+    "* Confidence - How strong is the rule? I.e. the confidence for `X->Y` is the likelihood that `Y` is purchased, if `X` is purchased. \n",
+    "This is the same as the conditional probability.\n",
+    "It is defined as follows:\n",
     "    * $conf(X \\rightarrow Y) = \\frac{supp(X \\cup Y)}{supp(X)}$\n",
     "* Lift\n",
     "    * Drawback with confidence: if the support for `Y` is very high, then the confidence of `X->Y` might not be very informative.\n",
@@ -486,22 +479,6 @@
    "outputs": [],
    "source": [
     "df_res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task \n",
-    "> Estimated task time:  min\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task \n",
-    "> Estimated task time:  min\n"
    ]
   },
   {
